--- a/FindYourWay/package.json
+++ b/FindYourWay/package.json
@@ -14,7 +14,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^10.1.2",
+    "cordova-plugin-device-orientation": "^2.0.1",
     "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-stepcounter": "^1.0.1",
     "cordova-plugin-vibration": "^3.1.1"
   },
   "cordova": {
@@ -22,10 +24,10 @@
       "android"
     ],
     "plugins": {
-      "cordova-plugin-geolocation": {
-        "GPS_REQUIRED": "true"
-      },
-      "cordova-plugin-vibration": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-stepcounter": {},
+      "cordova-plugin-device-orientation": {}
     }
   }
 }
